# china_bean_importers

./: .gitignore  LICENSE  README.md  __init__.py  common.py  config.example.py  dedup.py  importer.py  pyproject.toml  requirements.in  requirements.txt  secret.example.py  setup.cfg
.github/workflows/: test_package.yml
alipay_mobile/: __init__.py
alipay_web/: __init__.py
boc_credit_card/: __init__.py
boc_debit_card/: __init__.py
ccb_debit_card/: __init__.py
china_bean_importers/: __init__.py  importer.py
china_bean_importers/alipay_mobile/: __init__.py
china_bean_importers/boc_credit_card/: __init__.py
china_bean_importers/boc_debit_card/: __init__.py
china_bean_importers/icbc_credit_card/: __init__.py
china_bean_importers/icbc_debit_card/: __init__.py
china_bean_importers/thu_ecard/: decode.js
china_bean_importers/wechat/: __init__.py
cmb_debit_card/: __init__.py
cmbc_credit_card/: __init__.py
cmbc_debit_card/: __init__.py
hsbc_hk/: __init__.py
icbc_debit_card/: __init__.py
thu_ecard/: __init__.py
thu_ecard_old/: __init__.py
wechat/: __init__.py
