[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = 'china_bean_importers'
version = '0.0.3'
description = 'Beancount importers for Chinese users'
readme = 'README.md'
license = 'MIT'
dependencies = ['pymupdf', 'beancount < 3', 'BeautifulSoup4']
urls.repository = 'https://github.com/jiegec/china_bean_importers'
