[metadata]
name = china_bean_importers
version = 0.0.1
description = Beancount importers for Chinese users

[options]
package_dir =
    china_bean_importers = .
    china_bean_importers.alipay_mobile = ./alipay_mobile
    china_bean_importers.alipay_web = ./alipay_web
    china_bean_importers.boc_credit_card = ./boc_credit_card
    china_bean_importers.boc_debit_card = ./boc_debit_card
    china_bean_importers.ccb_debit_card = ./ccb_debit_card
    china_bean_importers.cmb_debit_card = ./cmb_debit_card
    china_bean_importers.cmbc_credit_card = ./cmbc_credit_card
    china_bean_importers.cmbc_debit_card = ./cmbc_debit_card
    china_bean_importers.hsbc_hk = ./hsbc_hk
    china_bean_importers.thu_ecard_old = ./thu_ecard_old
    china_bean_importers.wechat = ./wechat

packages =
    china_bean_importers
    china_bean_importers.alipay_mobile
    china_bean_importers.alipay_web
    china_bean_importers.boc_credit_card
    china_bean_importers.boc_debit_card
    china_bean_importers.ccb_debit_card
    china_bean_importers.cmb_debit_card
    china_bean_importers.cmbc_credit_card
    china_bean_importers.cmbc_debit_card
    china_bean_importers.hsbc_hk
    china_bean_importers.thu_ecard_old
    china_bean_importers.wechat

install_requires =
  pymupdf
  beancount < 3
  BeautifulSoup4
